<resources>
    <string name="app_name">Menus</string>
    <string name="tab_str_menu">菜谱</string>
    <string name="tab_str_find">发现</string>
    <string name="tab_str_classify">分类</string>
    <string name="tab_str_my">我的</string>
    <string name="bar_str_my">个人中心</string>
    <string name="str_loadig">正在加载……</string>
    
    <string name="str_my_message">个人信息</string>
    
    <string name="str_my_undefined">修改</string>

    <string name="str_username">账号</string>
    <string name="str_password">密码</string>

    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    
    <string name="str_arrow">> </string>

    <string name="str_setting">设置</string>
    
    <string name="str_exit">退出登录</string>

    <string name="str_hint_username">请输入账号</string>
    <string name="str_hint_password">请输入密码</string>
    <string name="str_hint_phone">请输入手机号</string>
    <string name="str_hint_code">请输入验证码</string>

    <string name="str_forget_password">忘记密码？</string>

    <string name="str_other_login">使用第三方账号登录</string>

    <string name="str_get_phone_code">获取验证码</string>

</resources>
