<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.mrliang.menus.view.ChangeColorIconWithText
            android:id="@+id/id_tab_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="@color/color_red"
            app:tab_icon="@mipmap/ic_tab_menu"
            app:tab_text="@string/tab_str_menu"
            app:tab_text_size="@dimen/tab_str_size_12" />

        <com.mrliang.menus.view.ChangeColorIconWithText
            android:id="@+id/id_tab_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="@color/color_red"
            app:tab_icon="@mipmap/ic_tab_find"
            app:tab_text="@string/tab_str_find"
            app:tab_text_size="@dimen/tab_str_size_12" />

        <com.mrliang.menus.view.ChangeColorIconWithText
            android:id="@+id/id_tab_classify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="@color/color_red"
            app:tab_icon="@mipmap/ic_tab_classify"
            app:tab_text="@string/tab_str_classify"
            app:tab_text_size="@dimen/tab_str_size_12" />

        <com.mrliang.menus.view.ChangeColorIconWithText
            android:id="@+id/id_tab_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tab_color="@color/color_red"
            app:tab_icon="@mipmap/ic_tab_my"
            app:tab_text="@string/tab_str_my"
            app:tab_text_size="@dimen/tab_str_size_12" />
    </LinearLayout>
</LinearLayout>
