<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_str_my"
            android:textColor="@color/color_white"
            android:textSize="@dimen/str_size_16" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gray"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_my_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_my_login"
                        android:layout_width="80dp"
                        android:layout_height="36dp"
                        android:layout_margin="12dp"
                        android:background="@drawable/bg_btn"
                        android:gravity="center"
                        android:text="@string/str_login"
                        android:textColor="@color/color_red"
                        android:textSize="@dimen/str_size_14" />

                    <Button
                        android:id="@+id/btn_my_register"
                        android:layout_width="80dp"
                        android:layout_height="36dp"
                        android:layout_margin="12dp"
                        android:background="@drawable/bg_btn"
                        android:gravity="center"
                        android:text="@string/str_register"
                        android:textColor="@color/color_red"
                        android:textSize="@dimen/str_size_14" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_gray"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/str_my_message"
                    android:textSize="@dimen/str_size_14" />

                <TextView
                    android:id="@+id/tv_my_undefind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/str_my_undefined"
                    android:textSize="@dimen/str_size_14" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_gray"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/str_setting"
                    android:textSize="@dimen/str_size_14" />

                <ImageView
                    android:id="@+id/img_my_setting"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_btn_search_go" />
            </RelativeLayout>

            <Button
                android:textSize="@dimen/str_size_14"
                android:id="@+id/btn_my_exit"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/bg_btn_exit"
                android:text="@string/str_exit"
                android:textColor="@color/color_white" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>