<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_login_back"
            android:layout_marginLeft="8dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/str_login"
            android:textColor="@color/color_white"
            android:textSize="@dimen/str_size_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/str_register"
            android:textColor="@color/color_red"
            android:textSize="@dimen/str_size_16"
            android:id="@+id/tv_login_register" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="40dp">

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_et"
            android:hint="@string/str_hint_username"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="60dp"
            android:paddingRight="10dp"
            android:paddingStart="60dp"
            android:paddingTop="10dp" />

        <ImageView
            android:id="@+id/img_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/et_login_username"
            android:layout_alignLeft="@id/et_login_username"
            android:layout_alignStart="@id/et_login_username"
            android:layout_alignTop="@id/et_login_username"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:padding="6dp"
            android:src="@mipmap/perm_group_personal_info" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_et"
            android:hint="@string/str_hint_password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="60dp"
            android:paddingRight="10dp"
            android:paddingStart="60dp"
            android:paddingTop="10dp" />

        <ImageView
            android:id="@+id/img_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/et_login_password"
            android:layout_alignLeft="@id/et_login_password"
            android:layout_alignStart="@id/et_login_password"
            android:layout_alignTop="@id/et_login_password"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:padding="6dp"
            android:src="@mipmap/perm_group_screenlock" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login_forget"
        android:textColor="@color/color_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="6dp"
        android:text="@string/str_forget_password" />

    <Button
        android:id="@+id/btn_login_btnlogin"
        android:textColor="@color/color_white"
        android:background="@drawable/bg_btn_login"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="72dp"
        android:text="@string/str_other_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_login_qq"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="10dp"
            android:src="@mipmap/qq_logo" />

        <ImageView
            android:id="@+id/img_login_weibo"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="10dp"
            android:src="@mipmap/weibo_logo" />
    </LinearLayout>

</LinearLayout>